# djinni_example

./: CMakeLists.txt  gen.sh  run.sh
client/com/suconbu/example/: Example.java  HelloCallbackImpl.java
server/: example.cpp  example.idl
